Corrected alignment issue

--- a/stylesheets/suckerfish.css
+++ b/stylesheets/suckerfish.css
@@ -1,7 +1,7 @@
 #navigation
 {
     position:absolute;
-    top:107px;/*matches header height*/
+    top:110px;/*matches header height*/
     left:0;
     margin-top:2em;/*matches header bottom margin*/
     width:11em;
